--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"electron .\"",
     "start": "electron .",
-    "icons": "node scripts/convert-icon.mjs && electron-icon-builder --input=assets/icon.png --output=assets"
+    "icons": "node scripts/convert-icon.mjs && electron-icon-builder --input=assets/icon.png --output=assets",
+    "test": "vitest"
   },
   "dependencies": {
     "@xenova/transformers": "^2.17.2",
@@ -34,6 +35,9 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/ws": "^8.18.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^14.3.1",
+    "jsdom": "^26.1.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
@@ -46,7 +50,8 @@
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-electron": "^0.12.0",
-    "vite-plugin-electron-renderer": "^0.14.5"
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "vitest": "^3.2.4"
   },
   "build": {
     "appId": "com.voicevibe.app",
