--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "typecheck": "tsc --noEmit",
     "build:mac": "npm run build && electron-builder --mac",
     "build:mac-x64": "npm run build && electron-builder --mac --x64",
     "build:mac-arm64": "npm run build && electron-builder --mac --arm64",
